fix jump effect on rhythmbox(3.4.8) play button

--- a/Cloudy-Solid/gtk-3.0/gtk.css
+++ b/Cloudy-Solid/gtk-3.0/gtk.css
@@ -5942,6 +5942,13 @@ list.tweak-group row.activatable > box > button.image-button {
   min-height: 18px;
 }
 
+/************
+* Rhythmbox *
+************/
+toolbar > toolitem > box > button, .inline-toolbar > toolitem > box > button {
+  padding: 3px 6px;
+}
+
 *:drop(active):focus,
 *:drop(active) {
   box-shadow: inset 0 0 0 1px #F08437;
